--- a/notebook/Sales_prediction_sami.ipynb
+++ b/notebook/Sales_prediction_sami.ipynb
@@ -63,7 +63,15 @@
     "colab_type": "code",
     "id": "uYSkzRZ6XjJ5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    }
+   ],
    "source": [
     "#!pip install category_encoders\n",
     "import pandas as pd\n",
@@ -6828,7 +6836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
